--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -1,20 +1,60 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=100,100
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=648,20
 Size=550,680
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=60,60
-Size=339,180
+Pos=0,0
+Size=1280,720
 Collapsed=0
 
 [Window][Another Window]
 Pos=60,60
 Size=198,71
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=-23,75
+Size=500,440
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=225,115
+Size=485,414
+Collapsed=0
+
+[Window][Stacked 2]
+Pos=527,324
+Size=226,71
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=435,274
+Size=409,172
+Collapsed=0
+
+[Window][Delete?]
+Pos=484,307
+Size=311,105
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=82,-3
+Size=621,714
+Collapsed=0
+
+[Window][Main Window]
+Pos=0,0
+Size=1280,720
 Collapsed=0
 
