--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=320,189
+Pos=0,0
 Size=400,400
 Collapsed=0
 
@@ -56,5 +56,60 @@ Collapsed=0
 [Window][Main Window]
 Pos=0,0
 Size=1920,1080
+Collapsed=0
+
+[Window][cannon]
+Pos=0,0
+Size=1920,1017
+Collapsed=0
+
+[Window][flamethrower]
+Pos=739,438
+Size=100,100
+Collapsed=0
+
+[Window][fastFiringAntiGround]
+Pos=704,203
+Size=100,100
+Collapsed=0
+
+[Window][antiTank]
+Pos=267,395
+Size=100,100
+Collapsed=0
+
+[Window][antiInfantry]
+Pos=59,289
+Size=140,171
+Collapsed=0
+
+[Window][antiAir]
+Pos=267,218
+Size=100,100
+Collapsed=0
+
+[Window][Gun Category]
+Pos=257,137
+Size=1920,1080
+Collapsed=0
+
+[Window][Regular Cannon]
+Pos=60,60
+Size=32,33
+Collapsed=1
+
+[Window][Flamethrower]
+Pos=60,60
+Size=32,33
+Collapsed=0
+
+[Window][Fast-Firing Anti-Ground]
+Pos=60,60
+Size=32,33
+Collapsed=1
+
+[Window][Anti-Air]
+Pos=60,60
+Size=32,33
 Collapsed=0
 
