showing some gun

--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -55,7 +55,7 @@ Collapsed=0
 
 [Window][Main Window]
 Pos=0,0
-Size=1920,1061
+Size=1920,1080
 Collapsed=0
 
 [Window][cannon]
@@ -90,26 +90,41 @@ Collapsed=0
 
 [Window][Gun Category]
 Pos=100,100
-Size=200,165
+Size=200,148
 Collapsed=0
 
 [Window][Regular Cannon]
-Pos=200,100
-Size=32,33
+Pos=300,100
+Size=158,121
 Collapsed=0
 
 [Window][Flamethrower]
-Pos=200,100
-Size=32,33
+Pos=337,146
+Size=123,50
 Collapsed=0
 
 [Window][Fast-Firing Anti-Ground]
-Pos=60,60
-Size=32,33
-Collapsed=1
+Pos=362,154
+Size=210,64
+Collapsed=0
 
 [Window][Anti-Air]
+Pos=443,91
+Size=123,73
+Collapsed=0
+
+[Window][stringToShow.c_str()]
 Pos=200,100
-Size=32,33
-Collapsed=1
+Size=32,32
+Collapsed=0
+
+[Window][Anti-Tank]
+Pos=60,60
+Size=136,136
+Collapsed=0
+
+[Window][Anti-Infantry]
+Pos=60,60
+Size=105,100
+Collapsed=0
 
