start of specialModule

--- a/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
+++ b/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="Librairies\Imgui\imgui_tables.cpp" />
     <ClCompile Include="Librairies\Imgui\imgui_widgets.cpp" />
     <ClCompile Include="ressources.cpp" />
+    <ClCompile Include="special.cpp" />
     <ClCompile Include="stats.cpp" />
     <ClCompile Include="tank.cpp" />
     <ClCompile Include="turret.cpp" />
@@ -191,6 +192,7 @@
     <ClInclude Include="Librairies\Soil\stb_image_aug.h" />
     <ClInclude Include="my_app.hpp" />
     <ClInclude Include="ressources.hpp" />
+    <ClInclude Include="special.hpp" />
     <ClInclude Include="stats.hpp" />
     <ClInclude Include="tank.hpp" />
     <ClInclude Include="turret.hpp" />
