--- a/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj.filters
+++ b/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="utils.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="special.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Librairies\Imgui\imstb_textedit.h">
@@ -189,6 +192,9 @@
       <Filter>Fichiers d%27en-tête\soil</Filter>
     </ClInclude>
     <ClInclude Include="utils.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="special.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
