--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -55,7 +55,7 @@ Collapsed=0
 
 [Window][Main Window]
 Pos=0,0
-Size=1920,1061
+Size=1920,1080
 Collapsed=0
 
 [Window][cannon]
@@ -194,6 +194,16 @@ Size=369,98
 Collapsed=0
 
 [Window][Light]
+Pos=411,200
+Size=1108,569
+Collapsed=0
+
+[Window][light]
+Pos=411,200
+Size=1108,569
+Collapsed=0
+
+[Window][Light Tank]
 Pos=411,200
 Size=1108,569
 Collapsed=0
