--- a/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
+++ b/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj
@@ -135,7 +135,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>Librairies;Librairies/Imgui;Librairies/GLFW;Librairies/Json;Librairies/Implot;Librairies/Soil;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Librairies;Librairies/Imgui;Librairies/GLFW;Librairies/Json;Librairies/Implot;Librairies/Soil</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -143,6 +143,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>Librairies/OpenGl/OpenGL32.Lib;Librairies/GLFW/glfw3.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -171,6 +172,7 @@
     <ClCompile Include="suspension.cpp" />
     <ClCompile Include="tank.cpp" />
     <ClCompile Include="tanktype.cpp" />
+    <ClCompile Include="texture.cpp" />
     <ClCompile Include="turret.cpp" />
     <ClCompile Include="turrettype.cpp" />
     <ClCompile Include="utils.cpp" />
@@ -208,6 +210,7 @@
     <ClInclude Include="suspension.hpp" />
     <ClInclude Include="tank.hpp" />
     <ClInclude Include="tanktype.hpp" />
+    <ClInclude Include="texture.hpp" />
     <ClInclude Include="turret.hpp" />
     <ClInclude Include="turrettype.hpp" />
     <ClInclude Include="utils.hpp" />
