--- a/Hoi Ultimate Bravery/imgui.ini
+++ b/Hoi Ultimate Bravery/imgui.ini
@@ -189,8 +189,8 @@ Size=120,170
 Collapsed=0
 
 [Window][generate]
-Pos=806,200
-Size=374,141
+Pos=929,200
+Size=82,79
 Collapsed=0
 
 [Window][Light]
@@ -199,8 +199,8 @@ Size=1108,569
 Collapsed=0
 
 [Window][light]
-Pos=411,200
-Size=1108,569
+Pos=250,200
+Size=142,238
 Collapsed=0
 
 [Window][Light Tank]
@@ -210,21 +210,26 @@ Collapsed=0
 
 [Window][medium]
 Pos=500,200
-Size=142,238
+Size=177,238
 Collapsed=0
 
 [Window][heavy]
 Pos=750,200
-Size=177,238
+Size=163,238
 Collapsed=0
 
 [Window][superHeavy]
 Pos=1000,200
-Size=156,238
+Size=163,238
 Collapsed=0
 
 [Window][modern]
 Pos=1250,200
-Size=149,238
+Size=205,238
+Collapsed=0
+
+[Window][options]
+Pos=832,200
+Size=307,75
 Collapsed=0
 
