--- a/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj.filters
+++ b/Hoi Ultimate Bravery/Hoi Ultimate Bravery.vcxproj.filters
@@ -138,7 +138,7 @@
     <ClCompile Include="settings.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\repos\Hoi Ultimate Bravery\Hoi Ultimate Bravery\Librairies\Imgui\imgui_stdlib.cpp">
+    <ClCompile Include="Librairies\Imgui\imgui_stdlib.cpp">
       <Filter>Fichiers sources\imgui</Filter>
     </ClCompile>
   </ItemGroup>
@@ -260,7 +260,7 @@
     <ClInclude Include="settings.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\repos\Hoi Ultimate Bravery\Hoi Ultimate Bravery\Librairies\Imgui\imgui_stdlib.h">
+    <ClInclude Include="Librairies\Imgui\imgui_stdlib.h">
       <Filter>Fichiers d%27en-tête\imgui</Filter>
     </ClInclude>
   </ItemGroup>
