--- a/Hoi Ultimate Bravery/Assets/Data/Settings.json
+++ b/Hoi Ultimate Bravery/Assets/Data/Settings.json
@@ -1,4 +1,1 @@
-{
-    "gamePath": "test",
-    "language": "en-en"
-}
+{"gamePath":"C:\\Program Files (x86)\\Steam\\steamapps\\common\\Hearts of Iron IV"}
